--- a/processor/Makefile
+++ b/processor/Makefile
@@ -1,14 +1,9 @@
 CONNECTALDIR?=../connectal
-# S2H_INTERFACES = EchoRequest:Echo.request
-# H2S_INTERFACES = Echo:EchoIndication
-S2H_INTERFACES = MemcpyRequest:Memcpy.request
-H2S_INTERFACES = Memcpy:MemcpyIndication
-MEM_READ_INTERFACES = lMemcpy.dmaReadClient
-MEM_WRITE_INTERFACES = lMemcpy.dmaWriteClient
-
+S2H_INTERFACES = EchoRequest:Echo.request
+H2S_INTERFACES = Echo:EchoIndication
 
 BSVFILES = Echo.bsv 
-#BSVFILES = Memcpy.bsv
+# BSVFILES += test.v
 CPPFILES= testecho.cpp
 
 CONNECTALFLAGS += -D TRACE_PORTAL
